feat: default grants with no role to "connect" permission
