# internal/server/handlers.go
@@ -505,7 +505,7 @@ func (a *API) CreateAccessKey(c *gin.Context, r *api.CreateAccessKeyRequest) (*a
 }
 
 func (a *API) ListGrants(c *gin.Context, r *api.ListGrantsRequest) ([]api.Grant, error) {
-	grants, err := access.ListGrants(c, r.Identity, r.Resource, r.Privilege)
+	grants, err := access.ListGrants(c, r.Subject, r.Resource, r.Privilege)
 	if err != nil {
 		return nil, err
 	}
@@ -533,7 +533,7 @@ func (a *API) CreateGrant(c *gin.Context, r *api.CreateGrantRequest) (*api.Grant
 	grant := &models.Grant{
 		Resource:  r.Resource,
 		Privilege: r.Privilege,
-		Identity:  r.Identity,
+		Subject:   r.Subject,
 	}
 
 	err := access.CreateGrant(c, grant)
@@ -599,12 +599,12 @@ func (a *API) Login(c *gin.Context, r *api.LoginRequest) (*api.LoginResponse, er
 		setAuthCookie(c, key, a.server.options.SessionDuration)
 
 		if a.t != nil {
-			if err := a.t.Enqueue(analytics.Track{Event: "infra.login.oidc", UserId: user.PolymorphicIdentifier().String()}); err != nil {
+			if err := a.t.Enqueue(analytics.Track{Event: "infra.login.oidc", UserId: user.PolyID().String()}); err != nil {
 				logging.S.Debug(err)
 			}
 		}
 
-		return &api.LoginResponse{PolymorphicID: user.PolymorphicIdentifier(), Name: user.Email, AccessKey: key}, nil
+		return &api.LoginResponse{PolymorphicID: user.PolyID(), Name: user.Email, AccessKey: key}, nil
 	case r.AccessKey != "":
 		expires := time.Now().Add(a.server.options.SessionDuration)
 
@@ -616,12 +616,12 @@ func (a *API) Login(c *gin.Context, r *api.LoginRequest) (*api.LoginResponse, er
 		setAuthCookie(c, key, a.server.options.SessionDuration)
 
 		if a.t != nil {
-			if err := a.t.Enqueue(analytics.Track{Event: "infra.login.exchange", UserId: machine.PolymorphicIdentifier().String()}); err != nil {
+			if err := a.t.Enqueue(analytics.Track{Event: "infra.login.exchange", UserId: machine.PolyID().String()}); err != nil {
 				logging.S.Debug(err)
 			}
 		}
 
-		return &api.LoginResponse{PolymorphicID: machine.PolymorphicIdentifier(), Name: machine.Name, AccessKey: key}, nil
+		return &api.LoginResponse{PolymorphicID: machine.PolyID(), Name: machine.Name, AccessKey: key}, nil
 	case r.PasswordCredentials != nil:
 		expires := time.Now().Add(a.server.options.SessionDuration)
 
@@ -633,12 +633,12 @@ func (a *API) Login(c *gin.Context, r *api.LoginRequest) (*api.LoginResponse, er
 		setAuthCookie(c, key, a.server.options.SessionDuration)
 
 		if a.t != nil {
-			if err := a.t.Enqueue(analytics.Track{Event: "infra.login.credentials", UserId: user.PolymorphicIdentifier().String()}); err != nil {
+			if err := a.t.Enqueue(analytics.Track{Event: "infra.login.credentials", UserId: user.PolyID().String()}); err != nil {
 				logging.S.Debug(err)
 			}
 		}
 
-		return &api.LoginResponse{PolymorphicID: user.PolymorphicIdentifier(), Name: user.Email, AccessKey: key, PasswordUpdateRequired: requiresUpdate}, nil
+		return &api.LoginResponse{PolymorphicID: user.PolyID(), Name: user.Email, AccessKey: key, PasswordUpdateRequired: requiresUpdate}, nil
 	}
 
 	return nil, api.ErrBadRequest
